--- a/Challenge2.Tests/Challenge2.Tests.csproj
+++ b/Challenge2.Tests/Challenge2.Tests.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
+        <PackageReference Include="Moq" Version="4.10.0"/>
         <PackageReference Include="SonarAnalyzer.CSharp" Version="7.8.0.7320"/>
         <PackageReference Include="StyleCop.Analyzers" Version="1.0.2"/>
         <PackageReference Include="xunit" Version="2.4.1"/>
