--- a/Challenge1/docker-compose.yml
+++ b/Challenge1/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
     - ASPNETCORE_ENVIRONMENT=Development
     - ASPNETCORE_URLS=http://0.0.0.0:80
-    - DATABASE_CONNECTION_STRING=Data Source=data.db;Version=3;
+    - DATABASE_CONNECTION_STRING=Data Source=data.db;
     restart: on-failure
     ports:
     - "5000:80"
