Finish challenge 2 with bonus question

--- a/Challenge2/Challenge2.csproj
+++ b/Challenge2/Challenge2.csproj
@@ -11,6 +11,8 @@
 
     <ItemGroup>
         <Content Include="data/**/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest"/>
+        <None Include="find-pair.sh" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest"/>
+        <None Include="find-trio.sh" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest"/>
     </ItemGroup>
 
     <ItemGroup>
